@@ -1,0 +1,5 @@
+# Here is how to make the keyring:
+gpg -a --output oar.asc --export 21E44652
+gpg --no-default-keyring --keyring oar.gpg --import oar.asc
+rm oar.asc
+
