@@ -1,0 +1,30 @@
+#!/bin/sh
+
+set -e
+
+KEYRING="oar"
+
+case "${1}" in
+        configure)
+                if [ -x /usr/bin/apt-key ]
+                then
+                        # update only uses /usr/share/keyrings/debian-archive-*.gpg
+                        # /usr/bin/apt-key update
+                        /usr/bin/apt-key add /usr/share/keyrings/${KEYRING}.gpg
+                fi
+                ;;
+
+        abort-upgrade|abort-remove|abort-deconfigure)
+
+                ;;
+
+        *)
+                echo "postinst called with unknown argument \`${1}'" >&2
+                exit 1
+                ;;
+esac
+
+
+
+exit 0
+
